--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="brand">
         <div class="logo" aria-hidden="true">ML</div>
         <div class="titleBox">
-          <div class="zTitle">MLCC — Animated Story Flow</div>
+          <div class="zTitle">MLCC — Q4 IT NewsLetter </div>
           <div class="sub">Auto-play cinematic tour of the IT newsletter — press pause to stop.</div>
         </div>
       </div>
@@ -123,62 +123,63 @@
   <!-- newsletter config (user-provided data) -->
   <script id="medserve-config" type="application/json">
 [
-    {
+  {
     "A0": "🖐 Introducing MLCC’s Contactless Feedback System",
-    "A1": "MLCC continues to lead the way in Cancer Care and Innovation, not only in medical excellence but also in patient and visitor experience.\n\nOur IT Unit has introduced a gesture-based, contactless feedback solution designed to make sharing your experience easier, faster, and completely hygienic.\n\nWith this new system, you don’t need to touch any screen or device — simply wave your hand to choose between Excellent, Very Good, Good, Fair, or Poor. Your feedback is recorded instantly and securely, with full respect for your privacy.\n\nWe hope you find this solution stress-free, intuitive, and effortless — another step in demonstrating MLCC’s commitment to excellence, innovation, and patient-centered care. Thank you for helping us make every experience better.",
-    "A2":"https://nlcc-apps.github.io/img/feedback.png"
+    "A1": "MLCC continues to lead the way in Cancer Care and Innovation, not only in medical excellence but also in patient and visitor experience.\n\nOur IT Unit has introduced a gesture-based, contactless feedback solution designed to make sharing experiences easier, faster, and completely hygienic.\n\nWith this new system, staff and visitors don’t need to touch any screen or device — simply wave a hand to choose between Excellent, Very Good, Good, Fair, or Poor. Feedback is recorded instantly and securely, with full respect for privacy.\n\nWe hope everyone finds this solution stress-free, intuitive, and effortless — another step in demonstrating our collective commitment to excellence, innovation, and patient-centered care. Thank you for helping us make every experience better.",
+    "A2": "https://nlcc-apps.github.io/img/feedback.png"
   },
   {
     "A0": "📢 Introducing e-Memo — A Smarter Way to Manage Memos and Invoices - Nov 15",
-    "A1": "We’re excited to introduce e-Memo, a new and efficient way to send and manage memos and invoices within your organization.\n\nThis innovative system replaces the old manual process with a seamless, automated link that makes communication between departments faster, smarter, and more reliable.\n\nWith e-Memo, every purchase request and invoice is automatically logged and tracked from creation to approval. Once finance processes an invoice, status updates and smart notifications are instantly shared, keeping everyone informed in real time. No more searching through endless emails — all approvals, totals, and document histories are organized and easily accessible.\n\nExperience the future of business communication with e-Memo — where memos, invoices, and approvals move as fast as your ideas. Stay connected, stay informed, and let automation handle the rest!",
-    "A2":"https://nlcc-apps.github.io/img/e-memo.png"
+    "A1": "We’re excited to introduce e-Memo, a new and efficient way for all of us to send and manage memos and invoices within our organization.\n\nThis innovative system replaces the old manual process with a seamless, automated link that makes communication between departments faster, smarter, and more reliable.\n\nWith e-Memo, every purchase request and invoice is automatically logged and tracked from creation to approval. Once finance processes an invoice, status updates and smart notifications are instantly shared, keeping everyone informed in real time. No more searching through endless emails — all approvals, totals, and document histories are organized and easily accessible.\n\nExperience the future of business communication with e-Memo — where memos, invoices, and approvals move as fast as our ideas. Stay connected, stay informed, and let automation handle the rest!",
+    "A2": "https://nlcc-apps.github.io/img/e-memo.png"
   },
   {
     "A0": "⚙ Strengthening Compliance with Carepath on Aria",
     "A1": "The Carepath system has been a key part of ensuring smooth clinical and treatment workflows on Aria.\n\nHowever, we’ve observed that some activities continue outside of Carepath, as the system currently allows users to proceed without enforcing its use. This may seem convenient, but it has important implications for care quality and tracking.\n\nWhen Carepath is bypassed, the system can’t accurately track pending contouring, ready plans, or task completions. Users also miss out on automatic notifications and reminders, leaving some activities open or unmonitored — which can affect both efficiency and patient safety.\n\nOur IT and clinical teams are actively working to close these gaps. Soon, when a major activity is opened outside Carepath, the system will prompt a friendly reminder — “Hey there, this isn’t possible. Please go through Carepath to proceed.” This will ensure all activities are properly logged, tasks are completed in sequence, and compliance remains consistent across the board.",
-    "A2":"https://nlcc-apps.github.io/img/license.jpeg"
+    "A2": "https://nlcc-apps.github.io/img/license.jpeg"
   },
   {
     "A0": "📁 Get Onboard with Zoho Drives",
     "A1": "We’re using this opportunity to get everyone onboarded to Zoho Drives, our secure and collaborative cloud workspace.\n\nZoho Drives is already being used across departments — including CT Activity Management, Procurement, and Finance — to help streamline document sharing, validation, and approvals.\n\nEach team member has access to Zoho Drive through their official email account. It provides a simple way to upload, store, and share files in real time, keeping our workflows transparent and well-organized.\n\nShared drives also ensure that required documents can be validated and accessed jointly when needed.\n\nIf you haven’t already, please log in to your Zoho account and explore the Drive features. Let’s make collaboration seamless and efficient — the Zoho way!",
-    "A2":"https://nlcc-apps.github.io/img/zoho-drive.png"
+    "A2": "https://nlcc-apps.github.io/img/zoho-drive.png"
   },
   {
     "A0": "💻 Introducing Zoho Meeting – Smarter, Simpler Online Collaboration",
-    "A1": "As part of our ongoing digital transformation efforts, the IT Unit is pleased to introduce Zoho Meeting, a secure and user-friendly platform for hosting virtual meetings, webinars, and team collaborations.\n\nDesigned for efficiency and ease of use, Zoho Meeting helps us stay connected whether we’re in the office, at home, or on the move.\n\nWith Zoho Meeting, you can schedule, host, and join meetings directly through your Zoho account, complete with screen sharing, chat, and recording options.\n\nIt integrates smoothly with other Zoho apps, making it easier to coordinate projects, share updates, and conduct department reviews — all in one unified environment.\n\nWe encourage all teams to begin using Zoho Meeting for internal discussions, project reviews, and cross-department collaborations. It’s secure, reliable, and fully aligned with our IT vision of smart, contactless, and connected operations.",
-    "A2":"https://nlcc-apps.github.io/img/zoho-meeting.png"
+    "A1": "As part of our ongoing digital transformation efforts, we’re pleased to introduce Zoho Meeting, a secure and user-friendly platform for hosting virtual meetings, webinars, and team collaborations.\n\nDesigned for efficiency and ease of use, Zoho Meeting helps all of us stay connected whether we’re in the office, at home, or on the move.\n\nWith Zoho Meeting, you can schedule, host, and join meetings directly through your Zoho account, complete with screen sharing, chat, and recording options.\n\nIt integrates smoothly with other Zoho apps, making it easier to coordinate projects, share updates, and conduct department reviews — all in one unified environment.\n\nWe encourage all teams to begin using Zoho Meeting for internal discussions, project reviews, and cross-department collaborations. It’s secure, reliable, and fully aligned with our IT vision of smart, contactless, and connected operations.",
+    "A2": "https://nlcc-apps.github.io/img/zoho-meeting.png"
   },
   {
     "A0": "📊 Introducing Zoho Spreadsheet – Smarter Data, Better Decisions",
-    "A1": "As part of our growing Zoho ecosystem, the IT Unit is excited to introduce Zoho Spreadsheet (Zoho Sheet) — a powerful, cloud-based platform for creating, sharing, and analyzing data collaboratively.\n\nIt brings familiar spreadsheet functions into a modern, connected workspace designed for teamwork and efficiency.\n\nWith Zoho Spreadsheet, multiple users can work on the same file simultaneously, with real-time updates and automatic version control.\n\nIt also supports data analysis, charts, pivot tables, and custom formulas, helping teams make faster, data-driven decisions.\n\nIntegration with other Zoho tools means your numbers can easily link to reports, dashboards, and project trackers.\n\nWe encourage all departments to explore Zoho Spreadsheet for daily reporting, performance tracking, and project management. It’s secure, smart, and helps us move closer to a fully digital, collaborative workplace.",
-    "A2":"https://nlcc-apps.github.io/img/zoho-spreadsheet-metrics.png"
+    "A1": "As part of our growing Zoho ecosystem, our IT Unit is excited to introduce Zoho Spreadsheet (Zoho Sheet) — a powerful, cloud-based platform for creating, sharing, and analyzing data collaboratively.\n\nIt brings familiar spreadsheet functions into a modern, connected workspace designed for teamwork and efficiency.\n\nWith Zoho Spreadsheet, multiple users can work on the same file simultaneously, with real-time updates and automatic version control.\n\nIt also supports data analysis, charts, pivot tables, and custom formulas, helping teams make faster, data-driven decisions.\n\nIntegration with other Zoho tools means our numbers can easily link to reports, dashboards, and project trackers.\n\nWe encourage all departments to explore Zoho Spreadsheet for daily reporting, performance tracking, and project management. It’s secure, smart, and helps us move closer to a fully digital, collaborative workplace.",
+    "A2": "https://nlcc-apps.github.io/img/zoho-spreadsheet-metrics.png"
   },
   {
     "A0": "🏥 Care Stage for Patient List – Smarter Tracking, Faster Updates",
     "A1": "We’re excited to announce a new Care Stage feature now available on Tracker!\n\nThis enhancement makes it easier than ever to bulk report the stage of care for multiple patients at once — saving valuable time and reducing manual tracking errors.\n\nWith this feature, our amazing Front Desk Team can simply import a patient list, and in seconds — Gbam! — the system automatically displays each patient’s current stage, whether Contouring, Planning, or Treatment.\n\nNo more checking one by one; everything is visible at a glance.\n\nThis update helps improve workflow visibility and ensures that every patient’s progress is tracked accurately across teams. It’s another smart step toward efficiency, transparency, and coordinated care within our clinical workflow.",
-    "A2":"https://nlcc-apps.github.io/img/PaymentValidation.png"
+    "A2": "https://nlcc-apps.github.io/img/PaymentValidation.png"
   },
   {
     "A0": "☁ Starlink + Sage: Finance Has Gone Cloud!",
-    "A1": "Our Finance Team has officially stepped beyond the terrestrial and into the cloud era!\n\nWith the successful deployment of Sage Cloud and the integration of Starlink — Elon Musk’s high-speed satellite internet, our finance operations are now running seamlessly and securely online.\n\nThis move ensures that our financial data is safer, more accessible, and less dependent on local infrastructure.\n\nNo more downtime or connectivity barriers — the Sage system now performs optimally from anywhere, backed by the reliability of Starlink’s satellite-powered network.\n\nBy combining Sage Cloud’s smart financial management tools with Starlink’s cutting-edge connectivity, we’ve unlocked a new level of efficiency, flexibility, and resilience in financial operations.\n\nThe future of finance at MLCC is truly above the clouds!",
-    "A2":"https://nlcc-apps.github.io/img/sage-cloud.png"
+    "A1": "Our Finance Team has officially stepped beyond the terrestrial and into the cloud era!\n\nWith the successful deployment of Sage Cloud and the integration of Starlink — Elon Musk’s high-speed satellite internet — our finance operations are now running seamlessly and securely online.\n\nThis move ensures that our financial data is safer, more accessible, and less dependent on local infrastructure.\n\nNo more downtime or connectivity barriers — the Sage system now performs optimally from anywhere, backed by the reliability of Starlink’s satellite-powered network.\n\nBy combining Sage Cloud’s smart financial management tools with Starlink’s cutting-edge connectivity, we’ve unlocked a new level of efficiency, flexibility, and resilience in financial operations.\n\nThe future of finance at MLCC is truly above the clouds!",
+    "A2": "https://nlcc-apps.github.io/img/sage-cloud.png"
   },
   {
     "A0": "💬 WEB BOT: Enhancing Patient Engagement with Tawk.to Chat App - Upgrade to Website",
-    "A1": "Meet our new virtual superhero — the Tawk.to Web Bot, always awake (unlike most of us after lunch).\n\nThis smart chatbot ensures patients get instant assistance 24/7, handling inquiries, follow-ups, and quick information requests with robotic grace and human charm.\n\nNo queues, no “please hold” moments — just fast, friendly digital support that keeps engagement alive even after office hours.\n\nPatients can reach out anytime, anywhere, and get guided responses faster than you can say “operator, please.”\n\nWith Tawk.to integration, MLCC now connects better, responds quicker, and delivers that extra touch of tech-driven empathy. Because patient care doesn’t clock out.",
-    "A2":"https://nlcc-apps.github.io/img/Tawk.png"
+    "A1": "Meet our new virtual superhero — the Tawk.to Web Bot, always awake (unlike most of us after lunch).\n\nThis smart chatbot ensures patients get instant assistance 24/7, handling inquiries, follow-ups, and quick information requests with robotic grace and human charm.\n\nNo queues, no “please hold” moments — just fast, friendly digital support that keeps engagement alive even after office hours.\n\nPatients can reach out anytime, anywhere, and get guided responses faster than you can say “operator, please.”\n\nWith Tawk.to integration, we now connect better, respond quicker, and deliver that extra touch of tech-driven empathy. Because patient care doesn’t clock out.",
+    "A2": "https://nlcc-apps.github.io/img/Tawk.png"
   },
   {
     "A0": "🧭 Unified IT Service Management: Optimizing Operational Efficiency",
-    "A1": "The IT Unit just hit the “level-up” button with our Unified IT Service Management (ITSM) platform — where all your incidents, changes, support requests, and bookings live together in peaceful harmony.\n\nGone are the days of chasing tickets across systems. From equipment faults to meeting room bookings, everything is now trackable, measurable, and fixable — all in real time.\n\nIt’s like having a digital butler who never forgets your service requests.\n\nThis upgrade means smoother workflows, faster response times, and happier users — because efficiency should never be a mystery, just a well-coded habit.",
-    "A2":"https://nlcc-apps.github.io/img/ITSM.png"
+    "A1": "Our IT Unit just hit the “level-up” button with our Unified IT Service Management (ITSM) platform — where all incidents, changes, support requests, and bookings live together in peaceful harmony.\n\nGone are the days of chasing tickets across systems. From equipment faults to meeting room bookings, everything is now trackable, measurable, and fixable — all in real time.\n\nIt’s like having a digital butler who never forgets a service request.\n\nThis upgrade means smoother workflows, faster response times, and happier users — because efficiency should never be a mystery, just a well-coded habit.",
+    "A2": "https://nlcc-apps.github.io/img/ITSM.png"
   },
   {
     "A0": "🚪 Special/Weekend Access to MLCC: Secure Entry Protocols Unveiled",
-    "A1": "Weekends at MLCC just got smarter (and safer).\n\nOur new Special Access Protocol ensures only authorized personnel can visit MLCC after weekend.\n\nAccess requests are now handled through a digital approval process that confirms identity, purpose, and timing before unlocking the gates.\n\nThe system keeps logs cleaner than a security guard’s clipboard and faster than an intercom buzz.\n\nBecause at MLCC, even weekend heroes need proper clearance — security, but make it stylish. 🔐",
-    "A2":"https://nlcc-apps.github.io/img/access.jpg"
+    "A1": "Weekends at MLCC just got smarter (and safer).\n\nOur new Special Access Protocol ensures that only authorized personnel can visit MLCC after weekends.\n\nAccess requests are now handled through a digital approval process that confirms identity, purpose, and timing before unlocking the gates.\n\nThe system keeps logs cleaner than a security guard’s clipboard and faster than an intercom buzz.\n\nBecause at MLCC, even weekend heroes need proper clearance — security, but make it stylish. 🔐",
+    "A2": "https://nlcc-apps.github.io/img/access.jpg"
   }
 ]
+
   </script>
 
   <script>
@@ -394,5 +395,6 @@
   </script>
 </body>
 </html>
+
 
 
