--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <div class="brand">
         <div class="logo" aria-hidden="true">ML</div>
         <div class="titleBox">
-          <div class="zTitle">MLCC — Q4 IT NewsLetter </div>
+          <div class="zTitle">MLCC — IT NewsLetter </div>
           <div class="sub">Auto-play cinematic tour of the IT newsletter — press pause to stop.</div>
         </div>
       </div>
@@ -395,6 +395,7 @@
   </script>
 </body>
 </html>
+
 
 
 
