--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>MLCC — Animated Story Flow (Auto-play)</title>
+<title>MLCC — IT NewsLetter</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -395,6 +395,7 @@
   </script>
 </body>
 </html>
+
 
 
 
