--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
   },
   {
     "A0": "🚪 Special/Weekend Access to MLCC: Secure Entry Protocols Unveiled",
-    "A1": "Weekends at MLCC just got smarter (and safer).\n\nOur new Special Access Protocol ensures that only authorized personnel can visit MLCC premises after work hours and during weekends.\n\nAccess requests are now handled through a digital approval process that confirms identity, purpose, and timing before unlocking the gates.\n\nThe system keeps logs cleaner than a security guard’s clipboard and faster than an intercom buzz.\n\nBecause at MLCC, even weekend heroes need proper clearance — security, but make it stylish. 🔐",
+    "A1": "Weekends at MLCC just got smarter (and safer).\n\nOur new Special Access Protocol ensures that only authorized personnel can visit MLCC premises after work hours, on weekends, and during holidays.\n\nAccess requests are now handled through a digital approval process that confirms identity, purpose, and timing before unlocking the gates.\n\nThe system keeps logs cleaner than a security guard’s clipboard and faster than an intercom buzz.\n\nBecause at MLCC, even weekend heroes need proper clearance — security, but make it stylish. 🔐",
     "A2": "https://nlcc-apps.github.io/img/access.jpg"
   }
 ]
@@ -559,6 +559,7 @@
   </script>
 </body>
 </html>
+
 
 
 
